# Piccolo

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  ReleaseNotes.md  [BugFix]EulerAngle and Quaternion of PiccoloEngine.md  build_compile_db.bat  build_linux.sh  build_macos.sh  build_macos_ninja.sh  build_windows.bat  imgui.ini  linux.sh
engine/: .gitignore  CMakeLists.txt  PilotEditor.ini  PilotEditor.json
engine/asset/: .gitignore
engine/asset/global/: particle.global.json  rendering.global.json
engine/asset/level/: 1-1.level.json
engine/asset/objects/_textures/: gold.tga  mr.tga  n.tga  silver.tga  white.tga
engine/asset/objects/character/player/: player.object.json
engine/asset/objects/environment/_material/: gold.material.json  silver.material.json  white.material.json
engine/asset/objects/environment/fence/: fence.object.json
engine/asset/objects/environment/floor/: floor.object.json
engine/asset/objects/environment/particle/: particle.object.json
engine/asset/objects/environment/stairs/: stairs.object.json
engine/asset/objects/environment/wall/: wall.object.json  wall_block.object.json  wall_with_door.object.json  wall_with_window.object.json
engine/asset/scripts/player/: set_jump_height.lua
engine/asset/texture/default/: brdf_schilk.hdr  spark.HDR
engine/asset/texture/sky/: skybox_irradiance_X+.hdr  skybox_irradiance_X-.hdr  skybox_irradiance_Y+.hdr  skybox_irradiance_Y-.hdr  skybox_irradiance_Z+.hdr  skybox_irradiance_Z-.hdr  skybox_specular_X+.hdr  skybox_specular_X-.hdr  skybox_specular_Y+.hdr  skybox_specular_Y-.hdr  skybox_specular_Z+.hdr  skybox_specular_Z-.hdr
engine/asset/world/: hello.world.json
engine/configs/deployment/: PiccoloEditor.ini  PiccoloPlayGround.ini  PilotEditor.ini
engine/configs/development/: PiccoloEditor.ini  PiccoloPlayGround.ini  PilotEditor.ini
engine/configs/development/windows/: PilotEditor.ini
engine/shader/: CMakeLists.txt
engine/shader/glsl/: analog_glitch.frag  anti_aliasing.frag  anti_aliasing.vert  axis.frag  axis.vert  brightness.frag  color_grading.frag  color_grading_dummy.frag  combine_ui.frag  debugdraw.frag  debugdraw.vert  deferred_lighting.frag  deferred_lighting.vert  fxaa.frag  fxaa.vert  image_block_glitch.frag  mesh.frag  mesh.vert  mesh_directional_light_shadow.frag  mesh_directional_light_shadow.vert  mesh_gbuffer.frag  mesh_inefficient_pick.frag  mesh_inefficient_pick.vert  mesh_point_light_shadow.frag  mesh_point_light_shadow.geom  mesh_point_light_shadow.vert  particle_emit.comp  particle_kickoff.comp  particle_simulate.comp  particlebillboard.frag  particlebillboard.vert  pixel.frag  post_process.frag  post_process.vert  skybox.frag  skybox.vert  tone_mapping.frag
engine/shader/include/: constants.h  gbuffer.h  mesh_lighting.h  mesh_lighting.inl  structures.h
engine/source/: .gitignore
engine/source/editor/: CMakeLists.txt
engine/source/editor/include/: axis.h  editor.h  editor_file_service.h  editor_global_context.h  editor_input_manager.h  editor_scene_manager.h  editor_ui.h
engine/source/editor/resource/: PiccoloEditor.rc  PilotEditor.rc
engine/source/editor/source/: axis.cpp  editor.cpp  editor_file_service.cpp  editor_global_context.cpp  editor_input_manager.cpp  editor_scene_manager.cpp  editor_ui.cpp  main.cpp
engine/source/metaParser/: CMakeLists.txt  README.md
engine/source/metaParser/Parser/: main.cpp
engine/source/metaParser/Parser/LanguageTypes/: Class.cpp  Class.h  Field.cpp  Field.h  TypeInfo.cpp  TypeInfo.h
engine/source/metaParser/Parser/common/: Namespace.h  Precompiled.h  SchemaModule.h
engine/source/metaParser/Parser/cursor/: Cursor.cpp  Cursor.h  CursorType.cpp  CursorType.h
engine/source/metaParser/Parser/generator/: generator.cpp  generator.h  reflectionGenerator.cpp  reflectionGenerator.h  serializerGenerator.cpp  serializerGenerator.h
engine/source/metaParser/Parser/meta/: MetaDataConfig.h  MetaInfo.cpp  MetaInfo.h  MetaUtils.cpp  MetaUtils.h
engine/source/metaParser/Parser/parser/: Parser.cpp  Parser.h
engine/source/metaParser/Parser/templateManager/: TemplateManager.cpp  TemplateManager.h
engine/source/meta_parser/: CMakeLists.txt
engine/source/meta_parser/parser/: main.cpp
engine/source/meta_parser/parser/common/: namespace.h  precompiled.h  schema_module.h
engine/source/meta_parser/parser/cursor/: cursor.cpp  cursor.h  cursor_type.cpp  cursor_type.h
engine/source/meta_parser/parser/generator/: generator.cpp  generator.h  reflection_generator.cpp  reflection_generator.h  serializer_generator.cpp  serializer_generator.h
engine/source/meta_parser/parser/language_types/: class.cpp  class.h  field.cpp  field.h  method.cpp  method.h  type_info.cpp  type_info.h
engine/source/meta_parser/parser/meta/: meta_data_config.h  meta_info.cpp  meta_info.h  meta_utils.cpp  meta_utils.h  meta_utils.hpp
engine/source/meta_parser/parser/parser/: parser.cpp  parser.h
engine/source/meta_parser/parser/template_manager/: template_manager.cpp  template_manager.h
engine/source/playground/: CMakeLists.txt
engine/source/playground/resource/: PiccoloPlayGround.rc
engine/source/playground/source/: main.cpp
engine/source/precompile/: precompile.cmake  precompile.json.in
engine/source/runtime/: CMakeLists.txt  engine.cpp  engine.h
engine/source/runtime/core/base/: hash.h  macro.h  public_singleton.h
engine/source/runtime/core/color/: color.h
engine/source/runtime/core/job/: job_system.cpp  job_system.h
engine/source/runtime/core/log/: log_system.cpp  log_system.h
engine/source/runtime/core/math/: axis_aligned.cpp  axis_aligned.h  bounding_box.h  math.cpp  math.h  math_headers.h  math_marcos.h  matrix3.cpp  matrix3.h  matrix4.cpp  matrix4.h  quaternion.cpp  quaternion.h  random.h  transform.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h  vector4.cpp  vector4.h
engine/source/runtime/core/meta/: json.h  meta_example.cpp  (+1 more)
engine/template/: allReflectionFile.mustache  allSerializer.h.mustache  allSerializer.ipp.mustache  commonReflectionFile.mustache  commonSerializerGenFile.mustache
(+382 files in other folders)
